@@ -19,6 +19,7 @@ version 2.0.0
 	* SSL support for IRC connections (Daniel Atallah)
 	* Add a "Last Seen" field to tooltips for buddies in your buddy
 	  list (Richard Laager)
+	* Buddy icons in buddy list tooltips (Felipe Contreras)
 
 	Bug fixes:
 	* Some memory leaks plugged (Miah Gregory, Felipe Contreras)
